# accidents-mexico-

./: Cargo.toml  README.md  build.rs  index.html  justfile  migration.py  migration.sql  nohup.out  output.css  prueba.html  prueba.sql  tailwind.config.js
CSV_files/tables/: tc_dia.csv  tc_edad.csv  tc_entidad.csv  tc_hora.csv  tc_minuto.csv  tc_municipio.csv  tc_periodo_mes.csv
src/: main.rs  schema.rs
