[package]
name = "advance_data_base_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-native-tls", "macros", "decimal"] }
tokio = { version = "1.21.2", features = ["full"] }
getrandom = { version  = "0.2.9", features = ["js"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.66"
axum = "0.6.18"
rust_decimal = "1.29.1"
